# Cyberry_Potter_Electromagic_Wand

./: CyberryPotter.uvguix.13087  CyberryPotter.uvoptx  CyberryPotter.uvprojx  Hardware_Development_Guide.md  Motion_Classification_Development_Guide.md  README.md  Sotfware_Development_Guide.md  main.c  vcpkg-configuration.json
3D_Print/step/: Gem.step  bottom.step  button.step  head.step  shell1.step  shell2.step
3D_Print/stl/: Gem.stl  Head_LED.stl  Shell1_LED.stl  Shell2_Laser.stl  bottom.stl  button.stl  head.stl  shell1.stl  shell2.stl
CNN/nnom_lib/port/: nnom_port.h
Hardware/: CyberryPotter-6050-v4.0.eprj  CyberryPotter.epro  Module_DIY.eprj  PCB_BOM.xlsx
STM32_Hardware/: MPU6050.c  W25Q64.c  W25Q64.h  hardware.c  hardware.h
Software/: .clangd  CyberryPotter+Target_1.cbuild.yml  CyberryPotter.cbuild-idx.yml  CyberryPotter.cbuild-pack.yml  CyberryPotter.cbuild-set.yml  CyberryPotter.cproject.yml  CyberryPotter.csolution.yml  CyberryPotter.uvguix.13087  CyberryPotter.uvoptx  CyberryPotter.uvprojx  CyberryPotterProgram.drawio  CyberryPotter_Target_1.sct  Target_1.cbuild-run.yml  vcpkg-configuration.json
Software/BLE-CC254x-1.3.2/: README.txt
Software/BLE-CC254x-1.3.2/Documents/: TI_CC2541_ARC_User_Guide.docx
Software/CNN/: .layer_q_list  CNNTestSerialRaw.py  CNNTrainRaw.py  InstallEnviroment.bat  Serial_Read.py  TrainAuto.py  drawing.py  merge.bat  merge.py  model.h5  requirements.txt  weights.h
Software/CNN/Merged/: Circle_12.txt  Circle_13.txt  Circle_21.txt  Circle_23.txt  Circle_24.txt  Circle_26.txt  Circle_29.txt  Circle_30.txt  Circle_33.txt  Circle_38.txt  Circle_40.txt  Circle_46.txt  Circle_52.txt  Circle_54.txt  Circle_58.txt  Circle_66.txt  Circle_78.txt  Circle_79.txt  Circle_88.txt  Circle_91.txt  Circle_93.txt  Circle_94.txt  Circle_96.txt  Circle_99.txt  Horn_26.txt  Horn_29.txt  Horn_3.txt  Horn_42.txt  Horn_43.txt  Horn_48.txt  Horn_5.txt  Horn_54.txt  Horn_55.txt  Horn_59.txt  Horn_61.txt  Horn_64.txt  Horn_67.txt  Horn_68.txt  Horn_71.txt  Horn_72.txt  (+289 more)
Software/CNN/Merged2/: Circle_1.txt  Circle_101.txt  Circle_104.txt  Circle_106.txt  Circle_116.txt  Circle_118.txt  Circle_16.txt  Circle_20.txt  Circle_22.txt  Circle_27.txt  Circle_3.txt  Circle_34.txt  Circle_35.txt  Circle_43.txt  Circle_5.txt  Circle_50.txt  Circle_51.txt  Circle_57.txt  Circle_74.txt  Circle_75.txt  Circle_76.txt  Circle_82.txt  Circle_83.txt  Circle_84.txt  Circle_86.txt  Circle_92.txt  Circle_98.txt  Horn_102.txt  Horn_103.txt  Horn_104.txt  Horn_105.txt  Horn_109.txt  Horn_110.txt  Horn_113.txt  Horn_118.txt  Horn_14.txt  Horn_16.txt  Horn_18.txt  Horn_19.txt  Horn_20.txt  (+397 more)
Software/CNN/Merged3/: Circle_100.txt  Circle_101.txt  Circle_102.txt  Circle_103.txt  Circle_105.txt  Circle_109.txt  Circle_11.txt  Circle_110.txt  Circle_111.txt  Circle_112.txt  Circle_116.txt  Circle_118.txt  Circle_119.txt  Circle_120.txt  Circle_14.txt  Circle_17.txt  Circle_18.txt  Circle_25.txt  Circle_28.txt  Circle_31.txt  Circle_36.txt  Circle_44.txt  Circle_47.txt  Circle_48.txt  Circle_64.txt  Circle_70.txt  Circle_73.txt  Circle_74.txt  Circle_75.txt  Circle_79.txt  Circle_8.txt  (+476 more)
Software/Listings/: CyberryPotter.map
Software/MainBoard/: ADC.c  ADC.h  CyberryPotter.c  CyberryPotter.h  IIC.c  IIC.h  IMU.c  IMU.h  LED.c  LED.h  MPU6050.c  MPU6050.h  SPI.c  SPI.h  USART.c  USART.h  W25Q64.c  W25Q64.h  button.c  button.h  config.h  hardware.c  hardware.h  main.c
Software/Module/: OLED.c  OLED.h  OLED_Font.h  module0_IR.c  module0_IR.h  module10.c  module10.h  module1_RF433.c  module1_RF433.h  module2_RF315.c  module2_RF315.h  module3.c  module3.h  module4.c  module4.h  module5.c  module5.h  module6.c  module6.h  module7.c  module7.h  module8.c  module8.h  module9.c  module9.h  module_IR_RF.c  module_IR_RF.h
Software/Objects/: CyberryPotter.axf  CyberryPotter.build_log.htm  CyberryPotter.hex  CyberryPotter.htm  CyberryPotter.lnp  CyberryPotter_Target 1.dep  adc.d  button.d  cyberrypotter.d  delay.d  hardware.d  iic.d  imu.d  inv_mpu.d  inv_mpu_dmp_motion_driver.d  led.d  main.d  misc.d  module0_ir.d  module10.d  module1_rf315.d  module1_rf433.d  module2_rf315.d  module3.d  module4.d  module5.d  module6.d  module7.d  module8.d  module9.d  module_ir_rf.d  mpu6050.d  spi.d  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_can.d  stm32f10x_cec.d  stm32f10x_crc.d  stm32f10x_dac.d  stm32f10x_dbgmcu.d  (+18 more)
Software/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Software/tmp/CyberryPotter+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
Software/tmp/CyberryPotter+Target_1/src/CyberryPotter+Target_1-stamp/: CyberryPotter+Target_1-configure-.cmake  CyberryPotter+Target_1-database-.cmake  CyberryPotter+Target_1-source_dirinfo.txt
Software/tmp/CyberryPotter+Target_1/tmp/: CyberryPotter+Target_1-cfgcmd.txt  CyberryPotter+Target_1-mkdirs.cmake
User/: CyberryPotter.c  CyberryPotter.h  IMU.c  config.h
(+1857 files in other folders)
